# tariff-battery-optimisation-model

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
datasets/: ProfileClass5.csv  mip2024dec.csv  mip2025jun.csv  mip2025mar.csv  mip2025sep.csv
