[project]
name = "tariff-battery-optimisation-model"
version = "0.1.0"
packages = [{ include = "tariff_battery_optimisation_model" }]
description = "tariff battery optimisation model + streamlit dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas<3",
    "plotly>=6.5.2",
    "streamlit>=1.30.0",
]
